 - SF Patch #2537799 jspui 1.updated Thai translation 1.4.2 (gone into google code)
 - SF Patch #2540683 jspui Thai translation for 1.5.1 (gone into google code) 
 - SF patch [2560974] for SF feature request [2560839] Make sitemap directory configurable
 - SF patch [2615647] Greek translation for xmlui version 1.5.1 submitted to Google code
 
(Elliot Metsger)
 - Patch for SF bug #2016130 checksum checker can not retrieve very large bitstream

(Tim Donohue)
 - [2433852] Add File Format Descriptions to XMLUI 1.5.x
 - [2462293] Enable Google Sitemaps for XMLUI
 - Fixed small bug in XMLUI's org.dspace.app.xmlui.cocoon.DSpaceMETSGenerator which caused Repository-wide METS file to fail to generate.
 - [2477820] DSpace 1.5 XMLUI - Enable METS <amdSec> using crosswalks
 - Fix for SF bug [2541285] Submission Forms don't preserve order of values
 - Fix for SF bug [2543413] XMLUI Submission forms display validation errors on other fields during add/remove
 - Fix for SF bug [2557654] Search with "%" causes NullPointerException in XMLUI

(Kim Shepherd)
 - [2385187] Fix for toDate method in DCDate

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.
- Added the ability to manage sessions with site wide alerts to prevent users from authenticating.
- Fixes a bug where the ability to edit an item durring workflow step 2 is not displayed.
- Jay Paz (SF#1898241) Add item Export from jspui and xmlui.
- Added easy support for google analytics statistics
- Added the ability for super admins to login as other users. 
- Added an activity viewer to the Control Panel

(Mark Diggory) 
- Fix for SF Bug #2082236 Subscription notification (sub-daily) no emails sent
- [2102580] William Hays: Duplicate Handle exception when replacing bitstreams