@@ -272,6 +272,9 @@ jsp.dspace-admin.general.remove                                 = Remove
 jsp.dspace-admin.general.save                                   = Save
 jsp.dspace-admin.general.update                                 = Update
 jsp.dspace-admin.general.upload                                 = Upload
+jsp.dspace-admin.group-confirm-delete.confirm                   = Are you sure this group should be deleted? Note: Deleting this group will remove all resource policies associated with this group.
+jsp.dspace-admin.group-confirm-delete.heading                   = Delete Group: {0}
+jsp.dspace-admin.group-confirm-delete.title                     = Delete Group
 jsp.dspace-admin.group-eperson-select.add                       = Add EPerson
 jsp.dspace-admin.group-eperson-select.heading                   = Select EPerson to Add to Group {0}
 jsp.dspace-admin.group-eperson-select.title                     = Select EPerson
